# sandbox

./: .gitignore  .stylelintrc  Makefile  docker-compose.yml
app-fastapi/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
app-fastapi/config/nginx/: nginx.conf
app-fastapi/config/nginx/conf.d/: gzip.conf
app-fastapi/config/nginx/sites/app.sandbox.com/: default.conf
app-fastapi/config/nginx/sites/app.sandbox.com/upstream/: uvicorn.conf
app-fastapi/config/supervisor/conf.d/: uvicorn.conf
app-fastapi/src/assets/strategies/: json_manifest_strategy.py
app-fastapi/templates/: base.html.jinja2
app-fastapi/templates/default/: index.html.jinja2
app-symfony/: .env.template  Dockerfile  composer.json  docker-entrypoint.sh
app-symfony/config/: routes.yaml
app-symfony/config/nginx/: nginx.conf
app-symfony/src/Controller/: DefaultController.php
app-symfony/templates/: base.html.twig
app-symfony/templates/default/: index.html.twig
cdn/: Dockerfile
cdn/config/docker-entrypoint.d/: 30-init.sh  99-startup.sh
devops/loadtest/: fastapi.py  locustfile.py  pyproject.toml  symfony.py
docker/haproxy/: Dockerfile  README.md
docker/nginx/nginx-fastapi-python-3.8/: DEPENDENCIES  Dockerfile  README.md  TAG  docker-entrypoint.sh  setup.sh
docker/nginx/nginx-symfony-php-7.4/: DEPENDENCIES  Dockerfile  README.md  TAG  docker-entrypoint.sh
docker/php/symfony-php-7.4/: DEPENDENCIES  Dockerfile  README.md  TAG  (+1 more)
web/: .eslintrc  babel.config.js  package.json  postcss.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
web/src/: app.js
(+45 files in other folders)
