[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Sean Quinn"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = {extras = ["watchgodreload"], version = "^0.11.8"}
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
